# git-workflow-utils

./: .envrc  .gitignore  README.md  pyproject.toml
.ipython/: .gitignore
.ipython/profile_default/: ipython_config.py
src/git_workflow_utils/: __init__.py  description.py  direnv.py  git.py  paths.py  templates.py  ticket.py  workflow.py
tests/: conftest.py  test_description.py  test_direnv.py  test_git.py  test_paths.py  test_templates.py  test_ticket.py  test_workflow.py
